added tabbar support to scroll to top on tap; hides tabBar to taskEditor and itemEditor on push

--- a/MultiTask/TasksTab.storyboard
+++ b/MultiTask/TasksTab.storyboard
@@ -424,6 +424,6 @@
         <image name="Starfish" width="50" height="50"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="P0C-2o-NYU"/>
+        <segue reference="qXS-1W-mkt"/>
     </inferredMetricsTieBreakers>
 </document>
