--- a/MultiTask/TaskHeaderView.xib
+++ b/MultiTask/TaskHeaderView.xib
@@ -16,7 +16,7 @@
                 <outlet property="editButton" destination="tFU-eQ-HzB" id="ug2-Kt-qnS"/>
                 <outlet property="statsLabel" destination="Jhq-gH-jAD" id="wqQ-kA-ZMa"/>
                 <outlet property="subtitleLabel" destination="n6L-Z6-u8L" id="Hwp-k4-2af"/>
-                <outlet property="titleLabel" destination="Hbp-wV-hDa" id="B8d-lY-Bs0"/>
+                <outlet property="titleTextView" destination="sYa-Qj-tbI" id="nb0-6C-R0S"/>
                 <outlet property="view" destination="iN0-l3-epB" id="JOq-rE-ZFl"/>
             </connections>
         </placeholder>
@@ -28,13 +28,6 @@
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="WVV-nW-Prw">
                     <rect key="frame" x="16" y="16" width="389" height="212"/>
                     <subviews>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="titleLabel" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Hbp-wV-hDa">
-                            <rect key="frame" x="16" y="16" width="357" height="127"/>
-                            <color key="backgroundColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                            <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                            <nil key="textColor"/>
-                            <nil key="highlightedColor"/>
-                        </label>
                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="B9k-Sg-wVO">
                             <rect key="frame" x="16" y="151" width="357" height="45"/>
                             <subviews>
@@ -70,16 +63,22 @@
                                 </label>
                             </subviews>
                         </stackView>
+                        <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" text="titleTextView" textAlignment="natural" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sYa-Qj-tbI">
+                            <rect key="frame" x="16" y="16" width="357" height="127"/>
+                            <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                            <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                        </textView>
                     </subviews>
                     <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                     <constraints>
-                        <constraint firstItem="Hbp-wV-hDa" firstAttribute="leading" secondItem="WVV-nW-Prw" secondAttribute="leading" constant="16" id="8fP-sx-cqa"/>
                         <constraint firstItem="B9k-Sg-wVO" firstAttribute="leading" secondItem="WVV-nW-Prw" secondAttribute="leading" constant="16" id="BZO-kv-FNr"/>
                         <constraint firstAttribute="trailing" secondItem="B9k-Sg-wVO" secondAttribute="trailing" constant="16" id="E8r-tO-a91"/>
-                        <constraint firstItem="B9k-Sg-wVO" firstAttribute="top" secondItem="Hbp-wV-hDa" secondAttribute="bottom" constant="8" id="UdE-RB-MUi"/>
-                        <constraint firstAttribute="trailing" secondItem="Hbp-wV-hDa" secondAttribute="trailing" constant="16" id="aRZ-k6-eKr"/>
+                        <constraint firstItem="B9k-Sg-wVO" firstAttribute="top" secondItem="sYa-Qj-tbI" secondAttribute="bottom" constant="8" id="MQE-Fe-pMz"/>
+                        <constraint firstAttribute="trailing" secondItem="sYa-Qj-tbI" secondAttribute="trailing" constant="16" id="Opt-GC-e2R"/>
+                        <constraint firstItem="sYa-Qj-tbI" firstAttribute="leading" secondItem="WVV-nW-Prw" secondAttribute="leading" constant="16" id="oTn-C9-cqe"/>
+                        <constraint firstItem="sYa-Qj-tbI" firstAttribute="top" secondItem="WVV-nW-Prw" secondAttribute="top" constant="16" id="q61-n3-DTU"/>
                         <constraint firstAttribute="bottom" secondItem="B9k-Sg-wVO" secondAttribute="bottom" constant="16" id="sGd-5M-syQ"/>
-                        <constraint firstItem="Hbp-wV-hDa" firstAttribute="top" secondItem="WVV-nW-Prw" secondAttribute="top" constant="16" id="weE-BN-fWp"/>
                     </constraints>
                 </view>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tFU-eQ-HzB">
