--- a/MultiTask/TasksTab.storyboard
+++ b/MultiTask/TasksTab.storyboard
@@ -258,7 +258,7 @@
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" barStyle="black" translucent="NO" largeTitles="YES" id="MLV-uS-TL8">
                         <rect key="frame" x="0.0" y="20" width="375" height="96"/>
                         <autoresizingMask key="autoresizingMask"/>
-                        <color key="tintColor" red="1" green="0.49803921569999998" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="tintColor" red="0.5" green="0.0" blue="0.5" alpha="1" colorSpace="calibratedRGB"/>
                         <color key="barTintColor" red="0.13725490200000001" green="0.13725490200000001" blue="0.13725490200000001" alpha="1" colorSpace="calibratedRGB"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
@@ -424,6 +424,6 @@
         <image name="Starfish" width="50" height="50"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="P0C-2o-NYU"/>
+        <segue reference="qXS-1W-mkt"/>
     </inferredMetricsTieBreakers>
 </document>
