--- a/MultiTask/SketchCell.xib
+++ b/MultiTask/SketchCell.xib
@@ -27,6 +27,7 @@
                                 <subviews>
                                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="4bC-y3-zs8">
                                         <rect key="frame" x="0.0" y="0.0" width="249" height="249"/>
+                                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                                         <constraints>
                                             <constraint firstAttribute="width" secondItem="4bC-y3-zs8" secondAttribute="height" id="jL1-EB-jU8"/>
                                         </constraints>
