--- a/MultiTask/TasksTab.storyboard
+++ b/MultiTask/TasksTab.storyboard
@@ -68,7 +68,7 @@
                 <viewControllerPlaceholder storyboardName="Settings" id="pW2-zX-ZIV" sceneMemberID="viewController"/>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="38H-2q-3TQ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2600" y="-1487"/>
+            <point key="canvasLocation" x="2510" y="-1157"/>
         </scene>
         <!--Task Editor View Controller-->
         <scene sceneID="UDi-eW-VHO">
@@ -267,7 +267,7 @@
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" barStyle="black" translucent="NO" largeTitles="YES" id="MLV-uS-TL8">
                         <rect key="frame" x="0.0" y="20" width="375" height="96"/>
                         <autoresizingMask key="autoresizingMask"/>
-                        <color key="tintColor" red="0.5" green="0.0" blue="0.5" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="tintColor" red="1" green="0.5" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                         <color key="barTintColor" red="0.13725490200000001" green="0.13725490200000001" blue="0.13725490200000001" alpha="1" colorSpace="calibratedRGB"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
@@ -397,42 +397,12 @@
             </objects>
             <point key="canvasLocation" x="3557.5999999999999" y="-52.623688155922046"/>
         </scene>
-        <!--Search Results View Controller-->
-        <scene sceneID="TGc-Cj-TdJ">
-            <objects>
-                <viewController storyboardIdentifier="SearchResultsViewController" id="aj3-JE-OWh" customClass="SearchResultsViewController" customModule="MultiTask" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="Fy2-pd-Pje">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="G2s-xz-OYR">
-                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                            </tableView>
-                        </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <constraints>
-                            <constraint firstItem="G2s-xz-OYR" firstAttribute="trailing" secondItem="cBU-ml-mB6" secondAttribute="trailing" id="Frv-Ee-bLh"/>
-                            <constraint firstItem="G2s-xz-OYR" firstAttribute="top" secondItem="cBU-ml-mB6" secondAttribute="top" id="Oby-lB-B6W"/>
-                            <constraint firstItem="G2s-xz-OYR" firstAttribute="leading" secondItem="cBU-ml-mB6" secondAttribute="leading" id="hGW-Hg-oED"/>
-                            <constraint firstItem="cBU-ml-mB6" firstAttribute="bottom" secondItem="G2s-xz-OYR" secondAttribute="bottom" id="wF5-EA-ehv"/>
-                        </constraints>
-                        <viewLayoutGuide key="safeArea" id="cBU-ml-mB6"/>
-                    </view>
-                    <connections>
-                        <outlet property="tableView" destination="G2s-xz-OYR" id="l6u-0c-8JX"/>
-                    </connections>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="A2b-76-FRf" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="3558" y="654"/>
-        </scene>
     </scenes>
     <resources>
         <image name="Plus" width="50" height="50"/>
         <image name="Starfish" width="50" height="50"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="qXS-1W-mkt"/>
+        <segue reference="P0C-2o-NYU"/>
     </inferredMetricsTieBreakers>
 </document>
