--- a/MultiTask/Settings.storyboard
+++ b/MultiTask/Settings.storyboard
@@ -21,24 +21,24 @@
                         <sections>
                             <tableViewSection headerTitle="User" id="Fif-4d-D6D">
                                 <cells>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" rowHeight="92" id="mo5-qO-DFP">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" accessoryType="disclosureIndicator" indentationWidth="10" rowHeight="92" id="mo5-qO-DFP">
                                         <rect key="frame" x="0.0" y="55.5" width="375" height="92"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="mo5-qO-DFP" id="802-yN-mlR">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="91.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="341" height="91.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="Jt1-7T-NP9">
-                                                    <rect key="frame" x="96" y="30" width="263" height="32.5"/>
+                                                    <rect key="frame" x="96" y="30" width="229" height="32.5"/>
                                                     <subviews>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="titleLabel" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oBY-EJ-n0U">
-                                                            <rect key="frame" x="0.0" y="0.0" width="263" height="18"/>
+                                                            <rect key="frame" x="0.0" y="0.0" width="229" height="18"/>
                                                             <fontDescription key="fontDescription" style="UICTFontTextStyleSubhead"/>
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="subtitleLabel" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WH0-Co-AmW">
-                                                            <rect key="frame" x="0.0" y="18" width="263" height="14.5"/>
+                                                            <rect key="frame" x="0.0" y="18" width="229" height="14.5"/>
                                                             <fontDescription key="fontDescription" style="UICTFontTextStyleCaption1"/>
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
@@ -73,6 +73,9 @@
                                             </constraints>
                                         </tableViewCellContentView>
                                         <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                        <connections>
+                                            <segue destination="QQa-cb-EP4" kind="show" identifier="ProfileCellToAvatarEditorViewController" id="jIW-2z-sBV"/>
+                                        </connections>
                                     </tableViewCell>
                                 </cells>
                             </tableViewSection>
@@ -230,7 +233,7 @@
         <!--Webs View Controller-->
         <scene sceneID="bhu-gJ-nzt">
             <objects>
-                <viewController storyboardIdentifier="WebsViewController" id="VKE-ic-Ng2" customClass="WebsViewController" customModule="MultiTask" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="WebsViewController" hidesBottomBarWhenPushed="YES" id="VKE-ic-Ng2" customClass="WebsViewController" customModule="MultiTask" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="JXa-Bh-fi5">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -261,16 +264,16 @@
             </objects>
             <point key="canvasLocation" x="3308" y="-551"/>
         </scene>
-        <!--Edit Avatar-->
+        <!--Avatars View Controller-->
         <scene sceneID="g2d-bH-01E">
             <objects>
-                <viewController id="QQa-cb-EP4" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="AvatarsViewController" hidesBottomBarWhenPushed="YES" id="QQa-cb-EP4" customClass="AvatarsViewController" customModule="MultiTask" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="rCb-Gc-BXa">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="U7l-Df-kmX">
-                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
+                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
                                 <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="WDn-kR-nuF">
                                     <size key="itemSize" width="50" height="50"/>
@@ -290,32 +293,15 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="j97-Cc-jNe"/>
                     </view>
-                    <navigationItem key="navigationItem" title="Edit Avatar" largeTitleDisplayMode="never" id="U9g-uz-l3D">
-                        <barButtonItem key="leftBarButtonItem" title="Cancel" id="uPQ-uM-wl7"/>
-                        <barButtonItem key="rightBarButtonItem" title="Save" id="Pat-aJ-xYo"/>
-                    </navigationItem>
+                    <navigationItem key="navigationItem" largeTitleDisplayMode="never" id="U9g-uz-l3D"/>
+                    <connections>
+                        <outlet property="collectionView" destination="U7l-Df-kmX" id="ub4-dg-bI2"/>
+                        <outlet property="collectionViewFlowLayout" destination="WDn-kR-nuF" id="oag-tS-KZl"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dpf-yh-ejM" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="4184.8000000000002" y="264.91754122938534"/>
-        </scene>
-        <!--Navigation Controller-->
-        <scene sceneID="RTa-mz-j01">
-            <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="3ZI-b1-3Mu" sceneMemberID="viewController">
-                    <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="dBx-MN-RaW">
-                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
-                    <nil name="viewControllers"/>
-                    <connections>
-                        <segue destination="QQa-cb-EP4" kind="relationship" relationship="rootViewController" id="eEh-9g-K48"/>
-                    </connections>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="np5-ft-luh" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="3308" y="265"/>
+            <point key="canvasLocation" x="3308" y="243"/>
         </scene>
     </scenes>
     <resources>
