--- a/MultiTask/Base.lproj/Main.storyboard
+++ b/MultiTask/Base.lproj/Main.storyboard
@@ -23,6 +23,7 @@
                     </tabBar>
                     <connections>
                         <segue destination="b3A-Kq-BQF" kind="relationship" relationship="viewControllers" id="NR9-mu-3bO"/>
+                        <segue destination="tHN-5A-HlK" kind="relationship" relationship="viewControllers" id="6KS-qZ-TGj"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="HuB-VB-40B" sceneMemberID="firstResponder"/>
@@ -39,10 +40,10 @@
             </objects>
             <point key="canvasLocation" x="213" y="325"/>
         </scene>
-        <!--SketchTab-->
+        <!--SketchesTab-->
         <scene sceneID="j6M-Fl-CtX">
             <objects>
-                <viewControllerPlaceholder storyboardName="SketchTab" id="tHN-5A-HlK" sceneMemberID="viewController">
+                <viewControllerPlaceholder storyboardName="SketchesTab" id="tHN-5A-HlK" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="Sketch" image="Cubes" landscapeImage="Cubes" largeContentSizeImage="Cubes" id="8kw-5H-Wnm"/>
                 </viewControllerPlaceholder>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="wby-ct-DHa" userLabel="First Responder" sceneMemberID="firstResponder"/>
