--- a/MultiTask/SketchesTab.storyboard
+++ b/MultiTask/SketchesTab.storyboard
@@ -66,13 +66,65 @@
                     <view key="view" contentMode="scaleToFill" id="rJ4-Gz-G7G">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="603"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" barStyle="black" translatesAutoresizingMaskIntoConstraints="NO" id="D3Y-Ow-yFb">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="44" id="6kM-dq-oPU"/>
+                                </constraints>
+                                <items>
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="TYR-oR-2Xj"/>
+                                    <barButtonItem title="Black" id="kxK-XI-P1i"/>
+                                    <barButtonItem title="White" id="RR6-Xm-gXt"/>
+                                    <barButtonItem title="Red" id="z4J-H5-ndg"/>
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="I2j-99-AYG"/>
+                                </items>
+                                <color key="tintColor" red="1" green="0.5" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                            </toolbar>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="XTI-vv-g2R">
+                                <rect key="frame" x="0.0" y="44.5" width="375" height="558.5"/>
+                            </imageView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ewy-Mf-a8j">
+                                <rect key="frame" x="0.0" y="44" width="375" height="0.5"/>
+                                <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="0.29999999999999999" id="S69-El-DaU"/>
+                                </constraints>
+                            </view>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="gUC-O7-aCM">
+                                <rect key="frame" x="0.0" y="44.5" width="375" height="558.5"/>
+                            </imageView>
+                        </subviews>
                         <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="D3Y-Ow-yFb" firstAttribute="trailing" secondItem="kjG-LU-T1J" secondAttribute="trailing" id="0ek-eR-sP3"/>
+                            <constraint firstItem="D3Y-Ow-yFb" firstAttribute="leading" secondItem="kjG-LU-T1J" secondAttribute="leading" id="3uk-BI-9q6"/>
+                            <constraint firstItem="gUC-O7-aCM" firstAttribute="top" secondItem="ewy-Mf-a8j" secondAttribute="bottom" id="7do-xy-rNF"/>
+                            <constraint firstItem="kjG-LU-T1J" firstAttribute="bottom" secondItem="XTI-vv-g2R" secondAttribute="bottom" id="AEn-Ey-aVP"/>
+                            <constraint firstItem="ewy-Mf-a8j" firstAttribute="top" secondItem="D3Y-Ow-yFb" secondAttribute="bottom" id="KCv-jg-3F0"/>
+                            <constraint firstItem="gUC-O7-aCM" firstAttribute="leading" secondItem="kjG-LU-T1J" secondAttribute="leading" id="Sue-Nm-EoL"/>
+                            <constraint firstItem="XTI-vv-g2R" firstAttribute="leading" secondItem="kjG-LU-T1J" secondAttribute="leading" id="T0V-7q-L8c"/>
+                            <constraint firstItem="ewy-Mf-a8j" firstAttribute="leading" secondItem="kjG-LU-T1J" secondAttribute="leading" id="YFw-W6-P4P"/>
+                            <constraint firstItem="XTI-vv-g2R" firstAttribute="trailing" secondItem="kjG-LU-T1J" secondAttribute="trailing" id="Z6o-56-3HE"/>
+                            <constraint firstItem="D3Y-Ow-yFb" firstAttribute="top" secondItem="kjG-LU-T1J" secondAttribute="top" id="d55-vK-dub"/>
+                            <constraint firstItem="gUC-O7-aCM" firstAttribute="trailing" secondItem="kjG-LU-T1J" secondAttribute="trailing" id="fIr-ra-RCL"/>
+                            <constraint firstItem="XTI-vv-g2R" firstAttribute="top" secondItem="ewy-Mf-a8j" secondAttribute="bottom" id="gSv-S3-bpM"/>
+                            <constraint firstItem="kjG-LU-T1J" firstAttribute="trailing" secondItem="ewy-Mf-a8j" secondAttribute="trailing" id="rFv-pC-u5z"/>
+                            <constraint firstItem="kjG-LU-T1J" firstAttribute="bottom" secondItem="gUC-O7-aCM" secondAttribute="bottom" id="zv1-XB-OBG"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="kjG-LU-T1J"/>
                     </view>
+                    <navigationItem key="navigationItem" id="5LZ-Ei-OIZ"/>
+                    <connections>
+                        <outlet property="dividerView" destination="ewy-Mf-a8j" id="Fcr-45-1a2"/>
+                        <outlet property="mainImageView" destination="XTI-vv-g2R" id="UlN-jU-bha"/>
+                        <outlet property="materialToolBar" destination="D3Y-Ow-yFb" id="Tf8-KT-hVR"/>
+                        <outlet property="tempImageView" destination="gUC-O7-aCM" id="v7s-nk-vDx"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="r1n-5Y-tnt" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2270" y="-45"/>
+            <point key="canvasLocation" x="2269.5999999999999" y="-45.42728635682159"/>
         </scene>
         <!--Sketch-->
         <scene sceneID="tUL-CY-gZB">
