--- a/MultiTask/SketchesTab.storyboard
+++ b/MultiTask/SketchesTab.storyboard
@@ -146,17 +146,17 @@
                         <outlet property="redButton" destination="QVr-56-ytr" id="jqS-iO-jJa"/>
                         <outlet property="toolboxView" destination="nFI-t5-sst" id="FDa-G9-NpO"/>
                         <outlet property="whiteButton" destination="vpM-MI-hcI" id="jIp-Ov-xj9"/>
-                        <segue destination="yR6-Hd-tV4" kind="custom" id="K2o-aK-Bft"/>
+                        <segue destination="yR6-Hd-tV4" kind="custom" identifier="SketchEditViewControllerToSaveDataViewController" id="K2o-aK-Bft"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="r1n-5Y-tnt" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="2017" y="188"/>
         </scene>
-        <!--Save Data Controller-->
+        <!--Save Data View Controller-->
         <scene sceneID="IbW-sS-3cv">
             <objects>
-                <viewController storyboardIdentifier="SaveDataController" id="yR6-Hd-tV4" customClass="SaveDataController" customModule="MultiTask" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="SaveDataViewController" id="yR6-Hd-tV4" customClass="SaveDataViewController" customModule="MultiTask" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="F29-Sc-PYJ">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
